fix git gateway for netlify CMS

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@
 
 backend:
   name: git-gateway # Netlify’s Git Gateway connects to Git provider’s API
+  repo: rocketacademy/jekyll-netlify-test
   branch: master # Branch to update (master by default)
 
 media_folder: "assets/img/uploads" # Folder where user uploaded files should go
